полная верстка барбершопа без ретины

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 
 <body>
     <header class="header-main">
-        <a class="header-main__logo-link"><img class="header-index__logo-header" width="226" height="30"
-                src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
+        <a class="header-main__logo-link">
+            <picture>
+                <source media="(min-width: 1200px)" srcset="img/logotype-desktop.png">
+                <source media="(min-width: 768px)" srcset="img/logotype-tablet.png">
+                <img class="header-index__logo-header" width="226" height="30" src="img/logotype-mobile.svg.png"
+                    alt="Логотип Барбершопа Бородинский">
+            </picture>
+        </a>
         <nav class="nav-main nav-main--closed nav-main--no-js">
             <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
@@ -205,13 +211,16 @@
                 <b class="social__title">Давайте дружить!</b>
                 <ul class="social__list">
                     <li class="social-item">
-                        <a class="social-link--vk" href="https://vk.com"><span class="visually-hidden">Мы Вконтакте</span></a>
+                        <a class="social-link--vk" href="https://vk.com"><span class="visually-hidden">Мы
+                                Вконтакте</span></a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link--facebook" href="https://www.facebook.com"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+                        <a class="social-link--facebook" href="https://www.facebook.com"><span
+                                class="visually-hidden">Мы в Фейсбуке</span></a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link--instagram" href="https://www.instagram.com/?hl=ru"><span class="visually-hidden">Мы в Инстаграме</span></a>
+                        <a class="social-link--instagram" href="https://www.instagram.com/?hl=ru"><span
+                                class="visually-hidden">Мы в Инстаграме</span></a>
                     </li>
                 </ul>
             </div>
@@ -222,6 +231,37 @@
             </div>
         </div>
     </footer>
+
+    <section class="modal personal-account">
+        <div class="personal-account__wrapper">
+            <h2 class="modal__title">Личный кабинет</h2>
+            <p class="modal__explanation">Введите свой логин и пароль, чтобы войти</p>
+            <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
+                <p class="modal__input">
+                    <label for="login" class="visually-hidden">Логин</label>
+                    <input class="modal__user" type="text" id="login" name="login" placeholder="Логин">
+                </p>
+                <p class="modal__input">
+                    <label for="password" class="visually-hidden">Пароль</label>
+                    <input class="modal__password" type="password" id="password" name="password" placeholder="Пароль">
+                </p>
+                <p class="modal__login-info">
+                    <label class="modal__login-checkbox">
+                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
+                            class="visually-hidden">
+                        <span class="modal__checkbox-indicator"></span>
+                        Запоминте меня
+                    </label>
+                    <a class="modal__restore" href="#">Я забыл пароль!</a>
+                </p>
+                <div class="modal__wrapper-buttons">
+                    <button class="button modal__enter">Войти</button>
+                    <button class="button modal__close" type="button">Закрыть</button>
+                </div>
+            </form>
+            </div.personal-account__wrapper>
+        </div>
+    </section>
 
     <script src="script/script.js"></script>
 
