--- a/form.html
+++ b/form.html
@@ -62,17 +62,23 @@
                     <div class="contact-details__wrapper">
                         <legend class="recording__form-title">Запись на стрижку</legend>
                         <a class="recording__button button" href="index.html">На главную</a>
-                        <input class="contact-details__recording-field recording-field-surname" type="" name="surname" placeholder="Фамилия">
+                        <input class="contact-details__recording-field recording-field-surname" type="" name="surname"
+                            placeholder="Фамилия">
                         <br>
-                        <input class="contact-details__recording-field recording__field recording__field--name" type="text" name="name" placeholder="Имя">
+                        <input class="contact-details__recording-field recording__field recording__field--name"
+                            type="text" name="name" placeholder="Имя">
                         <br>
-                        <input class="contact-details__recording-field recording__field--patronymic" type="text" name="patronymic" placeholder="Отчество">
+                        <input class="contact-details__recording-field recording__field--patronymic" type="text"
+                            name="patronymic" placeholder="Отчество">
                         <br>
-                        <input class="contact-details__recording-field recording__field--tel" type="tel" name="tel" placeholder="Контактный телефон">
+                        <input class="contact-details__recording-field recording__field--tel" type="tel" name="tel"
+                            placeholder="Контактный телефон">
                         <br>
-                        <input class="contact-details__recording-field recording__field--email" type="email" name="email" placeholder="Контактный e-mail">
+                        <input class="contact-details__recording-field recording__field--email" type="email"
+                            name="email" placeholder="Контактный e-mail">
                         <br>
-                        <textarea class="contact-details__recording-field recording__field--extra-info" name="extra-info" id="extra-infp-id" placeholder="Доп. информация для мастера"></textarea>
+                        <textarea class="contact-details__recording-field recording__field--extra-info"
+                            name="extra-info" id="extra-infp-id" placeholder="Доп. информация для мастера"></textarea>
                         <br>
                     </div>
                 </fieldset>
@@ -81,23 +87,28 @@
                     <legend class="beard-model__title">Выберите модель бороды:</legend>
                     <ul class="beard-model__list beard-model-ul">
                         <li class="beard-model__item beard-model--admiral">
-                            <input class="recoding__radio visually-hidden" type="radio" id="admiral-radio-radio" name="beard-model" value="admiral" checked>
+                            <input class="recoding__radio visually-hidden" type="radio" id="admiral-radio-radio"
+                                name="beard-model" value="admiral" checked>
                             <label for="admiral-radio-radio">адмирал</label>
                         </li>
                         <li class="beard-model__item beard-model--lumberjack">
-                            <input class="recoding__radio visually-hidden" type="radio" id="lumberjack-radio-radio" name="beard-model" value="lumberjack">
+                            <input class="recoding__radio visually-hidden" type="radio" id="lumberjack-radio-radio"
+                                name="beard-model" value="lumberjack">
                             <label for="lumberjack-radio-radio">лесоруб</label>
                         </li>
                         <li class="beard-model__item beard-model--polar-explorer">
-                            <input class="recoding__radio visually-hidden" type="radio" id="polar-explorer-radio-radio" name="beard-model" value="polar-explorer">
+                            <input class="recoding__radio visually-hidden" type="radio" id="polar-explorer-radio-radio"
+                                name="beard-model" value="polar-explorer">
                             <label for="polar-explorer-radio-radio">полярник</label>
                         </li>
                         <li class="beard-model__item beard-model--boyar">
-                            <input class="recoding__radio visually-hidden" type="radio" id="boyar-radio-radio" name="beard-model" value="boyar">
+                            <input class="recoding__radio visually-hidden" type="radio" id="boyar-radio-radio"
+                                name="beard-model" value="boyar">
                             <label for="boyar-radio-radio">боярин</label>
                         </li>
                         <li class="beard-model__item beard-model--sage">
-                            <input class="recoding__radio visually-hidden" type="radio" id="sage-radio-radio" name="beard-model" value="sage">
+                            <input class="recoding__radio visually-hidden" type="radio" id="sage-radio-radio"
+                                name="beard-model" value="sage">
                             <label for="sage-radio-radio">мудрец</label>
                         </li>
                     </ul>
@@ -107,28 +118,34 @@
                     <legend class="add-services__title">Дополнительные услуги:</legend>
                     <ul class="extra-services__list">
                         <li class="extra-services__item recording__checkbox--beard-color">
-                                <input class="recording__checkbox  visually-hidden" type="checkbox" id="beard-color-checkbox" name="beard-color" checked>
-                                <label for="beard-color-checkbox">Подкрасить бороду</label>
+                            <input class="recording__checkbox  visually-hidden" type="checkbox"
+                                id="beard-color-checkbox" name="beard-color" checked>
+                            <label for="beard-color-checkbox">Подкрасить бороду</label>
                         </li>
                         <li class="extra-services__item recording__checkbox--mustache-twist">
-                                <input class="recording__checkbox  visually-hidden" type="checkbox" id="mustache-twist-checkbox" name="mustache-twist" checked>
-                                <label for="mustache-twist-checkbox">Накрутить усы</label>
+                            <input class="recording__checkbox  visually-hidden" type="checkbox"
+                                id="mustache-twist-checkbox" name="mustache-twist" checked>
+                            <label for="mustache-twist-checkbox">Накрутить усы</label>
                         </li>
                         <li class="extra-services__item recording__checkbox--beard-comb">
-                                <input class="recording__checkbox visually-hidden" type="checkbox" id="beard-comb-checkbox" name="beard-comb">
-                                <label for="beard-comb-checkbox">Причесать бороду</label>
+                            <input class="recording__checkbox visually-hidden" type="checkbox" id="beard-comb-checkbox"
+                                name="beard-comb">
+                            <label for="beard-comb-checkbox">Причесать бороду</label>
                         </li>
                         <li class="extra-services__item recording__checkbox--hair-level-off">
-                                <input class="recording__checkbox visually-hidden" type="checkbox" id="hair-level-off-checkbox" name="hair-level-off">
-                                <label for="hair-level-off-checkbox">Подровнять виски</label>
+                            <input class="recording__checkbox visually-hidden" type="checkbox"
+                                id="hair-level-off-checkbox" name="hair-level-off">
+                            <label for="hair-level-off-checkbox">Подровнять виски</label>
                         </li>
                         <li class="extra-services__item recording__checkbox--gray-remove">
-                                <input class="recording__checkbox visually-hidden" type="checkbox" id="gray-remove-checkbox" name="gray-remove">
-                                <label for="gray-remove-checkbox">Убрать седину</label>
+                            <input class="recording__checkbox visually-hidden" type="checkbox" id="gray-remove-checkbox"
+                                name="gray-remove">
+                            <label for="gray-remove-checkbox">Убрать седину</label>
                         </li>
                         <li class="extra-services__item recording__checkbox--bald-polish">
-                                <input class="recording__checkbox  visually-hidden" type="checkbox" id="bald-polish-checkbox" name="bald-polish">
-                                <label for="bald-polish-checkbox">Отполировать лысину</label>
+                            <input class="recording__checkbox  visually-hidden" type="checkbox"
+                                id="bald-polish-checkbox" name="bald-polish">
+                            <label for="bald-polish-checkbox">Отполировать лысину</label>
                         </li>
                     </ul>
                 </fieldset>
@@ -179,7 +196,39 @@
         </div>
     </footer>
 
-        <script src="script/script.js"></script>
+    <section class="modal personal-account">
+    <div class="personal-account__wrapper">
+        <h2 class="modal__title">Личный кабинет</h2>
+        <p class="modal__explanation">Введите свой логин и пароль, чтобы войти</p>
+        <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
+            <p class="modal__input">
+                <label for="login" class="visually-hidden">Логин</label>
+                <input class="modal__user" type="text" id="login" name="login" placeholder="Логин">
+            </p>
+            <p class="modal__input">
+                <label for="password" class="visually-hidden">Пароль</label>
+                <input class="modal__password" type="password" id="password" name="password" placeholder="Пароль">
+            </p>
+            <p class="modal__login-info">
+                <label class="modal__login-checkbox">
+                    <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
+                        class="visually-hidden">
+                    <span class="modal__checkbox-indicator"></span>
+                    Запоминте меня
+                </label>
+                <a class="modal__restore" href="#">Я забыл пароль!</a>
+            </p>
+            <div class="modal__wrapper-buttons">
+                <button class="button modal__enter">Войти</button>
+                <button class="button modal__close" type="button">Закрыть</button>
+            </div>
+        </form>
+        </div.personal-account__wrapper>
+    </div>
+    
+    </section>
+
+    <script src="script/script.js"></script>
 
 </body>
 
