Полный барбершоп с ретиной без свг

--- a/index.html
+++ b/index.html
@@ -168,8 +168,11 @@
 
                     <blockquote class="reviews__item slider__item">
                         <p class="reviews__author-picture">
-                            <img class="reviews__author-image" src="img/travis-barker.jpg" width="50" height="49"
-                                alt="Фото Трэвиса Баркера">
+                            <picture>
+                                <img class="reviews__author-image" src="img/travis-barker.jpg"
+                                    srcset="img/travis-barker@2x.jpg 2x" width="50" height="49"
+                                    alt="Фото Трэвиса Баркера">
+                                </pictur>
                         </p>
                         <cite class="reviews__author-name">Трэвис Баркер</cite>
                         <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы
