--- a/photo.html
+++ b/photo.html
@@ -11,8 +11,10 @@
 
 <body class="inner-page">
     <header class="header-main">
-        <a href="index.html" class="header-main__logo-link"><img class="header-index__logo-header" width="226"
-                height="30" src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
+        <a href="index.html" class="header-main__logo-link">
+            <img class="header-index__logo-header" width="226" height="30" src="img/logotype-mobile.svg.png"
+                alt="Логотип Барбершопа Бородинский">
+        </a>
         <nav class="nav-main nav-main--closed nav-main--no-js">
             <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
@@ -69,7 +71,7 @@
                 <li class="photogallery__item">
                     <p class="photogallery__photo">
                         <img class="photogallery__photo-image" src="img/lzhepiotr-photo.jpg"
-                            alt="Фото Лжепётра Мчиславского">
+                            srcset="img/lzhepiotr-photo@2x.jpg 2x" alt="Фото Лжепётра Мчиславского">
                         <b class="photogallery__work-of-the-month"><span>Работа месяца</span></b>
                     </p>
                     <div class="photogallery__review">
@@ -88,7 +90,7 @@
                 <li class="photogallery__item">
                     <p class="photogallery__photo">
                         <img class="photogallery__photo-image" src="img/sasha-maltsev-photo.jpg"
-                            alt="Фото Саши Мальцева">
+                            srcset="img/sasha-maltsev-photo@2x.jpg 2x" alt="Фото Саши Мальцева">
                     </p>
 
                     <div class="photogallery__review">
@@ -104,7 +106,7 @@
                 <li class="photogallery__item">
                     <p class="photogallery__photo">
                         <img class="photogallery__photo-image" src="img/vladimir-ivanych-photo.jpg"
-                            alt="Фото Владимира Иваныча">
+                            srcset="img/vladimir-ivanych-photo@2x.jpg 2x" alt="Фото Владимира Иваныча">
                     </p>
                     <div class="photogallery__review">
                         <b class="photogallery__name">Владимир Иваныч</b>
@@ -119,7 +121,7 @@
                 <li class="photogallery__item">
                     <p class="photogallery__photo">
                         <img class="photogallery__photo-image" src="img/winston-blue-photo.jpg"
-                            alt="Фото Винстона Синего">
+                            srcset="img/winston-blue-photo@2x.jpg 2x" alt="Фото Винстона Синего">
                     </p>
                     <div class="photogallery__review">
                         <b class="photogallery__name">Винстон Синий</b>
@@ -131,7 +133,7 @@
                     </div>
                 </li>
             </ul>
-            
+
         </section>
 
         <section class="price-list">
