--- a/form.html
+++ b/form.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Запись на стрижку</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body class="inner-page">
     <header class="header-main">
-        <a href="index.html" class="header-main__logo-link"><img class="header-index__logo-header" width="226"
-                height="30" src="img/logotype-mobile.svg.png" alt="Логотип Барбершопа Бородинский"></a>
+        <a href="index.html" class="header-main__logo-link">
+            <picture>
+                <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img src="img/logo-mobile.svg" width="226" height="30" alt="Логотип Барбершопа Бородинский">
+            </picture>
+        </a>
         <nav class="nav-main nav-main--closed nav-main--no-js">
             <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 
@@ -197,35 +202,35 @@
     </footer>
 
     <section class="modal personal-account">
-    <div class="personal-account__wrapper">
-        <h2 class="modal__title">Личный кабинет</h2>
-        <p class="modal__explanation">Введите свой логин и пароль, чтобы войти</p>
-        <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
-            <p class="modal__input">
-                <label for="login" class="visually-hidden">Логин</label>
-                <input class="modal__user" type="text" id="login" name="login" placeholder="Логин">
-            </p>
-            <p class="modal__input">
-                <label for="password" class="visually-hidden">Пароль</label>
-                <input class="modal__password" type="password" id="password" name="password" placeholder="Пароль">
-            </p>
-            <p class="modal__login-info">
-                <label class="modal__login-checkbox">
-                    <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
-                        class="visually-hidden">
-                    <span class="modal__checkbox-indicator"></span>
-                    Запоминте меня
-                </label>
-                <a class="modal__restore" href="#">Я забыл пароль!</a>
-            </p>
-            <div class="modal__wrapper-buttons">
-                <button class="button modal__enter">Войти</button>
-                <button class="button modal__close" type="button">Закрыть</button>
-            </div>
-        </form>
-        </div.personal-account__wrapper>
-    </div>
-    
+        <div class="personal-account__wrapper">
+            <h2 class="modal__title">Личный кабинет</h2>
+            <p class="modal__explanation">Введите свой логин и пароль, чтобы войти</p>
+            <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
+                <p class="modal__input">
+                    <label for="login" class="visually-hidden">Логин</label>
+                    <input class="modal__user" type="text" id="login" name="login" placeholder="Логин">
+                </p>
+                <p class="modal__input">
+                    <label for="password" class="visually-hidden">Пароль</label>
+                    <input class="modal__password" type="password" id="password" name="password" placeholder="Пароль">
+                </p>
+                <p class="modal__login-info">
+                    <label class="modal__login-checkbox">
+                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
+                            class="visually-hidden">
+                        <span class="modal__checkbox-indicator"></span>
+                        Запоминте меня
+                    </label>
+                    <a class="modal__restore" href="#">Я забыл пароль!</a>
+                </p>
+                <div class="modal__wrapper-buttons">
+                    <button class="button modal__enter">Войти</button>
+                    <button class="button modal__close" type="button">Закрыть</button>
+                </div>
+            </form>
+            </div.personal-account__wrapper>
+        </div>
+
     </section>
 
     <script src="script/script.js"></script>
