--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Барбершоп "Бородинский"</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 
@@ -46,6 +46,7 @@
                             <svg class="user-list__login-icon" width="16" height="16">
                                 <use xlink:href="img/sprite.svg#icon-login"></use>
                             </svg>
+                            <include src="img/sprite.svg"></include>
                             Войти
                         </a>
                     </li>
