--- a/photo.html
+++ b/photo.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Наши работы</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body class="inner-page">
     <header class="header-main">
         <a href="index.html" class="header-main__logo-link">
-            <img class="header-index__logo-header" width="226" height="30" src="img/logotype-mobile.svg.png"
-                alt="Логотип Барбершопа Бородинский">
+            <picture>
+                <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img src="img/logo-mobile.svg" width="226" height="30" alt="Логотип Барбершопа Бородинский">
+            </picture>
         </a>
         <nav class="nav-main nav-main--closed nav-main--no-js">
             <button class="nav-main__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
