фулл барбершом через w3.org

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                 <img class="reviews__author-image" src="img/travis-barker.jpg"
                                     srcset="img/travis-barker@2x.jpg 2x" width="50" height="49"
                                     alt="Фото Трэвиса Баркера">
-                                </pictur>
+                            </picture>
                         </p>
                         <cite class="reviews__author-name">Трэвис Баркер</cite>
                         <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы
@@ -247,8 +247,7 @@
                 </p>
                 <p class="modal__login-info">
                     <label class="modal__login-checkbox">
-                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
-                            class="visually-hidden">
+                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember">
                         <span class="modal__checkbox-indicator"></span>
                         Запоминте меня
                     </label>
@@ -259,7 +258,6 @@
                     <button class="button modal__close" type="button">Закрыть</button>
                 </div>
             </form>
-            </div.personal-account__wrapper>
         </div>
     </section>
 
