--- a/photo.html
+++ b/photo.html
@@ -253,8 +253,7 @@
                 </p>
                 <p class="modal__login-info">
                     <label class="modal__login-checkbox">
-                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
-                            class="visually-hidden">
+                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember">
                         <span class="modal__checkbox-indicator"></span>
                         Запоминте меня
                     </label>
@@ -265,7 +264,6 @@
                     <button class="button modal__close" type="button">Закрыть</button>
                 </div>
             </form>
-            </div.personal-account__wrapper>
         </div>
     </section>
 
