--- a/form.html
+++ b/form.html
@@ -67,11 +67,11 @@
                     <div class="contact-details__wrapper">
                         <legend class="recording__form-title">Запись на стрижку</legend>
                         <a class="recording__button button" href="index.html">На главную</a>
-                        <input class="contact-details__recording-field recording-field-surname" type="" name="surname"
+                        <input class="contact-details__recording-field recording-field-surname" type="text" name="surname"
                             placeholder="Фамилия">
                         <br>
                         <input class="contact-details__recording-field recording__field recording__field--name"
-                            type="text" name="name" placeholder="Имя">
+                            type="text" name="text" placeholder="Имя">
                         <br>
                         <input class="contact-details__recording-field recording__field--patronymic" type="text"
                             name="patronymic" placeholder="Отчество">
@@ -216,8 +216,7 @@
                 </p>
                 <p class="modal__login-info">
                     <label class="modal__login-checkbox">
-                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember"
-                            class="visually-hidden">
+                        <input class="modal__checkbox visually-hidden" type="checkbox" name="remember">
                         <span class="modal__checkbox-indicator"></span>
                         Запоминте меня
                     </label>
@@ -228,7 +227,6 @@
                     <button class="button modal__close" type="button">Закрыть</button>
                 </div>
             </form>
-            </div.personal-account__wrapper>
         </div>
 
     </section>
